@@ -3,4 +3,5 @@
 -Dfile.encoding=UTF-8
 -Djava.awt.headless=true
 --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+--add-exports java.base/jdk.internal.misc=org.eclipse.serializer.base
 --enable-native-access=ALL-UNNAMED
